# cmake_ROOT

./: README.md
source/: CMakeLists.txt  hello.cxx  main.cxx
source/include/: Hello.hh  RandGaus.hh
source/src/: Hello.cc  RandGaus.cc
